chore(docs): Updated link to open collective

--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://opencollective.com/platform/donate" />
+    <meta http-equiv="refresh" content="0; url=https://opencollective.com/ngrx/donate" />
   </head>
   <body>
   </body>
